# apps/api/src/v1/users/users.module.ts
@@ -1,12 +1,17 @@
 import { Module } from "@nestjs/common";
 import { MongooseModule } from "@nestjs/mongoose";
+import { EmailTemplatesModule } from "../email-templates/email-templates.module";
 import { User, UserSchema } from "./schemas/users.schema";
 import { UserQuoteModule } from "./user-quote/user-quote.module";
 import { UsersController } from "./users.controller";
 import { UsersService } from "./users.service";
 
 @Module({
-  imports: [MongooseModule.forFeature([{ name: User.name, schema: UserSchema }]), UserQuoteModule],
+  imports: [
+    MongooseModule.forFeature([{ name: User.name, schema: UserSchema }]),
+    UserQuoteModule,
+    EmailTemplatesModule,
+  ],
   controllers: [UsersController],
   providers: [UsersService],
   exports: [UsersService, MongooseModule, UserQuoteModule],
